--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-minimal-side-navigation": "^1.9.2"
+    "react-minimal-side-navigation": "^1.9.2",
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
